add scope_path and rename task table and api field
